--- a/.env_template
+++ b/.env_template
@@ -1,4 +1,7 @@
+NOTE: Required data still here for Yasaman and for group members to use this in the future (Will remove if advised)
+
+
 MONGO_URI=mongodb+srv://admin:mypassword@cluster0.krqight.mongodb.net/MRU-Eats
 NODE_ENV=development
 PORT=8080
-JWT_SECRET=MRUEATS
+JWT_SECRET=
